--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.16.3",
     "formidable": "^1.2.1",
     "helmet": "^3.12.0",
+    "loadtest": "^5.2.0",
     "moment": "^2.29.3",
     "mysql2": "^2.3.3",
     "node-fetch": "^2.6.1",
