--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "sequelize": "^6.21.3",
     "serve-favicon": "^2.5.0",
     "signale": "^1.1.0",
+    "sqlite3": "^5.1.2",
     "swagger-ui-express": "^4.3.0"
   },
   "devDependencies": {
