updating isce events

--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "loadtest": "^5.2.0",
     "moment": "^2.29.3",
     "mysql2": "^2.3.3",
-    "node-fetch": "^2.6.1",
     "pm2": "^5.2.0",
+    "request": "^2.88.2",
     "sequelize": "^6.21.3",
     "serve-favicon": "^2.5.0",
     "signale": "^1.1.0",
