--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,10 +19,10 @@ jobs:
       - name: executing remote ssh commands using password
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.REMOTE_HOST  }}
-          username: ${{ secrets.REMOTE_USER }}
-          password: ${{ secrets.REMOTE_PASS }}
-          port: ${{ secrets.REMOTE_PORT }}
+          host: ${{ secrets.remote_host  }}
+          username: ${{ secrets.remote_user }}
+          password: ${{ secrets.remote_pass }}
+          port: ${{ secrets.remote_port }}
           script: |
             whoami
             ls -al
