--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,4 +25,5 @@ jobs:
           port: ${{ secrets.remote_port }}
           script: |
             whoami
+            echo "$HOST"
             ls -al
