pushing main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install packages && run lint
         run: yarn
 
-      - name: executing remote ssh commands using ssh key
+      - name: executing events remote ssh commands using ssh key
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.HOST }}
