--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "docs": "node swagger.js",
     "test": "node test.js",
     "init-seed": "bash init.sh",
-    "start": "node src/app.js",
-    "production": "node src/app.js",
+    "start": "yarn docs && pm2 start ./src/app.js -n 'ISCE_events API' --watch",
+    "production": "yarn docs && pm2 reload ./src/app.js -n 'ISCE_events API'",
     "fix-package": "yarn-audit-fix --force",
     "pm2-kill": "pm2 kill",
     "pm2-list": "pm2 list",
