--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.18.3",
+    "consolidate": "^0.16.0",
     "cors": "^2.8.4",
     "cryptr": "^6.0.3",
     "dotenv": "^16.0.1",
@@ -30,6 +31,7 @@
     "helmet": "^3.12.0",
     "loadtest": "^5.2.0",
     "moment": "^2.29.3",
+    "mustache": "^4.2.0",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.8.0",
     "pm2": "^5.2.0",
