removed yarn and swagger

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "docs": "node swagger.js",
     "test": "node test.js",
     "init-seed": "bash init.sh",
-    "start": "yarn docs && node ./src/app.js",
-    "production": "yarn docs && node ./src/app.js",
+    "start": "node ./src/app.js",
+    "production": "node ./src/app.js",
     "fix-package": "yarn-audit-fix --force",
     "pm2-kill": "pm2 kill",
     "pm2-list": "pm2 list",
