--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "serve-favicon": "^2.5.0",
     "signale": "^1.1.0",
     "sqlite3": "^5.1.2",
-    "swagger-ui-express": "^4.3.0"
+    "swagger-ui-express": "^4.3.0",
+    "validate-credit-card": "^1.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.19",
