--- a/package.json
+++ b/package.json
@@ -39,10 +39,11 @@
     "moment": "^2.29.3",
     "mustache": "^4.2.0",
     "mysql2": "^2.3.3",
+    "node-cron": "^3.0.2",
     "nodemailer": "^6.8.0",
     "pm2": "^5.2.0",
     "request": "^2.88.2",
-    "sequelize": "^6.21.3",
+    "sequelize": "^6.8.0",
     "serve-favicon": "^2.5.0",
     "signale": "^1.1.0",
     "sqlite3": "^5.1.2",
